# edge-computing

./: .gitignore  CNAME  Makefile  Makefile.mk  README.md  docker-compose.yml
.github/workflows/: pages.yml
app/common/: index.html
app/common/assets/: index.js  styles.css
app/logic/go/: Makefile  README.md  bench_test.go  benchmark-results.txt  go.mod  logic.js  main.go  main_test.go
app/logic/go/codegen/: main.go
app/logic/go/logic/: bench_test.go  colorname.go  colorname_test.go  colornamelookuptable.go  colortype.go  colortype_test.go  colortypemodel.go  logic.js  start.go  start_test.go  ui.go  ui_test.go
app/logic/js/: Makefile  logic.js
app/logic/js/codegen/: main.go
app/logic/js/logic/: colorname.js  colorname.test.js  colornamelookuptable.js  colortype.js  colortype.test.js  index.js  logic.js  logic.js.test  package.json
app/logic/js/logic/data/: colornamelookuptable.js
app/logic/rust/: Cargo.toml  Makefile
app/logic/rust/src/: lib.rs
benchmarks/speedtest/: go.mod  go.sum  main.go
codegen/: .dockerignore  Dockerfile  README.md  go.mod  index.html.template  main.go
codegen/cmd/speedtest/: main.go
codegen/speedtest/: speedtest.go
colortypemodel/: .dockerignore  docker-compose.yml  main.py
data/: colorsname.csv
public/: index.html
server/: main.go
