[package]
name = "logic"
authors = ["Dmitry Kisler <admin@dkisler.com>"]
license = "MIT"
repository = "https://github.com/kislerdm/edge-computing"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.82"
